--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GoIT HW-11</title>
+    <title>GoIT HW-12</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -24,6 +24,7 @@
       <button type="submit">Search</button>
     </form>
     <ul class="gallery"></ul>
+    <button type="button" class="padding-button is-hidden">Load more</button>
     <div class="loader is-hidden"></div>
     <script type="module" src="./main.js"></script>
   </body>
